...

            sheetContent
                .background(Color(theme.colors.background))
                .clipShape(RoundedCorners(radius: DesignKitMetrics.Radius.sheet.sizeInArtwork,
                                          corners: [.topLeft, .topRight]))
        }
        .accessibilityIdentifier("pin.sheet")
    }

    private var sheetContent: some View {
        VStack(alignment: .leading, spacing: FigmaSize.spacing16.sizeInArtwork) {
            header
            SecureCodeIndicator(
...
